[package]
name = "childing"
version = "0.1.0"
authors = ["Bart Massey <bart.massey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.98"
os_pipe = "0.9.2"
perfcnt = "0.7.1"

[[bin]]
name = "childing"
path = "childing.rs"
